--- a/btvnb3/b2.html
+++ b/btvnb3/b2.html
@@ -9,7 +9,7 @@
         <table width="100%" border="1" cellspacing="0" cellpadding="30">
             <!-- Dòng 1 -->
             <tr>
-                <th
+                <td
                     colspan="4"
                     style="
                         text-align: right;
@@ -18,7 +18,7 @@
                     "
                 >
                     9+9
-                </th>
+                </td>
             </tr>
 
             <!-- Dòng 2 -->
@@ -29,10 +29,10 @@
                     font-weight: bold;
                 "
             >
-                <th>1</th>
-                <th>2</th>
-                <th>3</th>
-                <th style="font-weight: bold; font-size: xx-large">+</th>
+                <td>1</td>
+                <td>2</td>
+                <td>3</td>
+                <td style="font-weight: bold; font-size: xx-large">+</td>
             </tr>
             <!-- Dòng 3 -->
             <tr
@@ -42,10 +42,10 @@
                     font-weight: bold;
                 "
             >
-                <th>4</th>
-                <th>5</th>
-                <th>6</th>
-                <th style="font-weight: bold; font-size: xx-large">-</th>
+                <td>4</td>
+                <td>5</td>
+                <td>6</td>
+                <td style="font-weight: bold; font-size: xx-large">-</td>
             </tr>
             <!-- Dòng 4 -->
             <tr
@@ -55,10 +55,10 @@
                     font-weight: bold;
                 "
             >
-                <th>7</th>
-                <th>8</th>
-                <th>9</th>
-                <th style="font-weight: bold; font-size: xx-large">x</th>
+                <td>7</td>
+                <td>8</td>
+                <td>9</td>
+                <td style="font-weight: bold; font-size: xx-large">x</td>
             </tr>
             <!-- Dòng 5 -->
             <tr
@@ -68,10 +68,10 @@
                     font-weight: bold;
                 "
             >
-                <th>C</th>
-                <th>0</th>
-                <th style="font-weight: bold; font-size: xx-large">=</th>
-                <th style="font-weight: bold; font-size: xx-large">/</th>
+                <td>C</td>
+                <td>0</td>
+                <td style="font-weight: bold; font-size: xx-large">=</td>
+                <td style="font-weight: bold; font-size: xx-large">/</td>
             </tr>
         </table>
     </body>
