--- a/btvnb3/b3.html
+++ b/btvnb3/b3.html
@@ -12,7 +12,7 @@
                 align-items: center;
             }
 
-            input {
+            input required {
                 width: auto;
                 height: 15px;
             }
@@ -24,110 +24,128 @@
         </style>
     </head>
     <body style="width: 18%; height: auto; background: rgb(203, 186, 186)">
-        <div class="container">
-            <label for="username">Username:</label>
-            <input type="text" />
-        </div>
-        <div class="container">
-            <label for="password">Password:</label>
-            <input type="text" />
-        </div>
-        <div class="container">
-            <label>City of <br />Employment:</label>
-            <input type="text" />
-        </div>
-        <div class="container" style="justify-content: flex-start">
-            <label>Web server</label>
-            <select style="margin-left: 56px">
-                <option value="0">Chọn tỉnh/Thành phố</option>
-                <option value="1">Hà Nội</option>
-                <option value="2">Hạ Long</option>
-                <option value="3">HCM</option>
-            </select>
-        </div>
-
-        <div class="container" style="justify-content: flex-start">
-            <div>
-                <label>
-                    Please specify <br />
-                    your role</label
-                >
+        <form>
+            <div class="container">
+                <label for="username">Username:</label>
+                <input required type="text" id="username" name="username" />
+            </div>
+            <div class="container">
+                <label for="password">Password:</label>
+                <input required type="password" id="password" name="password" />
             </div>
 
-            <div style="margin-left: 28px">
+            <div class="container">
+                <label>City of <br />Employment:</label>
+                <input required type="text" name="City Employment" />
+            </div>
+            <div class="container" style="justify-content: flex-start">
+                <label>Web server</label>
+                <select style="margin-left: 56px">
+                    <option value="0">Select City</option>
+                    <option value="1">Hanoi</option>
+                    <option value="2">Halong</option>
+                    <option value="3">HCM</option>
+                </select>
+            </div>
+
+            <div class="container" style="justify-content: flex-start">
                 <div>
-                    <label class="lblradio"
-                        ><input type="radio" name="job" value="0" />Admin</label
+                    <label>
+                        Please specify <br />
+                        your role</label
                     >
                 </div>
-                <div>
-                    <label
-                        ><input
-                            type="radio"
-                            name="job"
-                            value="1"
-                        />Engineer</label
-                    >
-                </div>
-                <div>
-                    <label
-                        ><input
-                            type="radio"
-                            name="job"
-                            value="2"
-                        />Manager</label
-                    >
-                </div>
-                <div>
-                    <label
-                        ><input type="radio" name="job" value="3" />Guest</label
-                    >
+
+                <div style="margin-left: 28px">
+                    <div>
+                        <label class="lblradio"
+                            ><input
+                                required
+                                type="radio"
+                                name="job"
+                                value="0"
+                            />Admin</label
+                        >
+                    </div>
+                    <div>
+                        <label
+                            ><input
+                                required
+                                type="radio"
+                                name="job"
+                                value="1"
+                            />Engineer</label
+                        >
+                    </div>
+                    <div>
+                        <label
+                            ><input
+                                required
+                                type="radio"
+                                name="job"
+                                value="2"
+                            />Manager</label
+                        >
+                    </div>
+                    <div>
+                        <label
+                            ><input
+                                required
+                                type="radio"
+                                name="job"
+                                value="3"
+                            />Guest</label
+                        >
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="container" style="justify-content: flex-start">
-            <div>
-                <label>
-                    Single Sign-on <br />
-                    co the following</label
-                >
+            <div class="container" style="justify-content: flex-start">
+                <div>
+                    <label>
+                        Single Sign-on <br />
+                        co the following</label
+                    >
+                </div>
+                <div style="margin-left: 16px">
+                    <div>
+                        <label class="lblradio"
+                            ><input
+                                required
+                                type="checkbox"
+                                name="pay"
+                                value="0"
+                            />Mail</label
+                        >
+                    </div>
+                    <div>
+                        <label
+                            ><input
+                                required
+                                type="checkbox"
+                                name="pay"
+                                value="1"
+                            />Payroll</label
+                        >
+                    </div>
+                    <div>
+                        <label
+                            ><input
+                                required
+                                type="checkbox"
+                                name="pay"
+                                value="1"
+                            />Self-service</label
+                        >
+                    </div>
+                </div>
             </div>
-            <div style="margin-left: 16px">
-                <div>
-                    <label class="lblradio"
-                        ><input
-                            type="checkbox"
-                            name="pay"
-                            value="0"
-                        />Mail</label
-                    >
-                </div>
-                <div>
-                    <label
-                        ><input
-                            type="checkbox"
-                            name="pay"
-                            value="1"
-                        />Payroll</label
-                    >
-                </div>
-                <div>
-                    <label
-                        ><input
-                            type="checkbox"
-                            name="pay"
-                            value="1"
-                        />Self-service</label
-                    >
-                </div>
+            <div
+                class="container"
+                style="justify-content: flex-end; gap: 15px; border-radius: 2px"
+            >
+                <button>Login</button>
+                <button type="reset">Reset</button>
             </div>
-        </div>
-        <div
-            class="container"
-            style="justify-content: flex-end; gap: 15px; border-radius: 2px"
-        >
-            <button>Login</button>
-            <button>Reset</button>
-        </div>
+        </form>
     </body>
 </html>
