--- a/btvnb3/b4.html
+++ b/btvnb3/b4.html
@@ -6,29 +6,26 @@
         <title>Bài 4</title>
     </head>
     <body style="background: bisque">
+        <h2>Get in touch with us by filling contact form below</h2>
         <form>
-            <h2>Get in touch with us by filling contact form below</h2>
             <div style="display: flex; gap: 30px">
-                <textarea
-                    cols="20"
-                    rows="1"
+                <input
+                    type="text"
+                    name="full_name"
                     placeholder="*Enter your full name"
-                    style="resize: none"
-                ></textarea>
-                <textarea
-                    cols="20"
-                    rows="1"
+                />
+                <input
+                    type="text"
+                    name="full_name"
                     placeholder="*Enter your full name"
-                    style="resize: none"
-                ></textarea>
+                />
             </div>
             <div style="margin-top: 20px">
-                <textarea
-                    cols="20"
-                    rows="1"
+                <input
+                    type="text"
+                    name="full_name"
                     placeholder="*Enter your full name"
-                    style="resize: none"
-                ></textarea>
+                />
             </div>
 
             <div style="margin-top: 20px">
